CMAKE_MINIMUM_REQUIRED(VERSION 3.24)

PROJECT(1D_CG_CPP)

SET( CMAKE_CXX_COMPILER "g++")

ADD_COMPILE_OPTIONS(-std=c++20)

SET(Eigen3_DIR CMAKE_INSTALL_PREFIX/share/eigen3/cmake)

FIND_PACKAGE(Eigen3 3.3 REQUIRED NO_MODULE)

INCLUDE_DIRECTORIES("/usr/include/eigen3")

ADD_EXECUTABLE(1D_CG main.cpp Tools.cpp)

TARGET_LINK_LIBRARIES(1D_CG Eigen3::Eigen)

